...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/activity_main_empty_list_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/main_empty_list_title"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text_font="@{`raleway-semibold`}" />

        <TextView
            android:id="@+id/activity_main_empty_list_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:gravity="center"
            android:text="@string/main_empty_list_subtitle"
            android:textSize="18sp"
            tools:text_font="@{`raleway-regular`}" />

        <Button
            android:id="@+id/activity_main_empty_list_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/white_button_red_border"
            android:elevation="8dp"
            android:onClick="@{click}"
...
