...
            android:id="@+id/item_fact_begin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/item_fact_close"
            android:layout_toStartOf="@id/item_fact_close"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:paddingBottom="8dp"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
...
